--- a/news/src/main/resources/application.properties
+++ b/news/src/main/resources/application.properties
@@ -2,7 +2,16 @@ spring.application.name=news
 
 server.port=8081
 fastapi.base-url=http://localhost:8000
+fastapi.sentiment=http://localhost:8001
+fastapi.chat=http://localhost:8002
+fastapi.book=http://localhost:8003
+fastapi.youtube=http://localhost:8004
+fastapi.news=http://localhost:8005
+fastapi.trend=http://localhost:8006
 
 spring.data.mongodb.uri=mongodb+srv://Dgict_TeamB:team1234@cluster0.5d0uual.mongodb.net/test123?retryWrites=true&w=majority
 spring.data.mongodb.database=test123
 spring.thymeleaf.cache=false
+
+logging.level.reactor.netty.http.client=DEBUG
+logging.level.org.springframework.web.reactive.function.client=DEBUG
