--- a/news/src/main/resources/application.properties
+++ b/news/src/main/resources/application.properties
@@ -6,7 +6,7 @@ fastapi.chat=http://localhost:8002
 fastapi.youtube=http://localhost:8004
 fastapi.trend=http://localhost:8006
 fastapi.senti=http://localhost:8007
-fastapi.analysis=http://localhost:8008
+fastapi.analysis=http://127.0.0.1:8008
 fastapi.dashboard=http://localhost:8009
 
 spring.data.mongodb.uri=mongodb+srv://Dgict_TeamB:team1234@cluster0.5d0uual.mongodb.net/test123?retryWrites=true&w=majority
