1012 유승민-묵은친구들

--- a/.gitignore
+++ b/.gitignore
@@ -663,3 +663,4 @@ $RECYCLE.BIN/
 *.pyc
 
 # End of https://www.toptal.com/developers/gitignore/api/windows,macos,pycharm,intellij,python,java,jetbrains,webstorm,react,jupyternotebooks
+run_many.py
